--- a/app/views/authentication/sign_in.html.erb
+++ b/app/views/authentication/sign_in.html.erb
@@ -1,5 +1,5 @@
 <h1>Sign In</h1>
-<%= form_for :user, :url => sign_in_path(@user) do |f| %>
+<%= form_for  @user, :as => :user, :url => sign_in_path(@user) do |f| %>
     <p>
       <%= f.label ' email:' %><br />
       <%= f.text_field :email , :required => true %>
