--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,6 @@
-<footer class="footer">
+<footer class="container-fluid text-center navbar-fixed-bottom">
   <small>
     The <a href="http://www.railstutorial.org/">Where Is My Phone</a>
     by <a href="http://www.michaelhartl.com/">Ander Mancisidor</a> and <a href="http://www.michaelhartl.com/">Urtzi Otamendi</a>
   </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
-  </nav>
 </footer>
