--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,9 @@
                 </div>
               <% end %>
               </div>
+            <div class="row">
+
+            </div>
     <% end %>
 
       </div>
