6igoera change password

--- a/app/views/device/device.html.erb
+++ b/app/views/device/device.html.erb
@@ -1,5 +1,4 @@
-//= require underscore
-//= require gmaps/google
+
 
 <% if current_device %>
     <div class="container">
@@ -75,6 +74,26 @@
 </script>
 
 <script>
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+        markers = handler.addMarkers([
+            {
+                "lat": 0,
+                "lng": 0,
+                "picture": {
+                    "url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
+                    "width":  32,
+                    "height": 32
+                },
+                "infowindow": "hello!"
+            }
+        ]);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+    });
+</script>
+
+<script>
     function createSidebarLi(json){
         return ("<li><a>" + json.name + "</a></li>");
     };
@@ -116,6 +135,8 @@
     });
 
 </script>
+
+
 
 
 <script src="//maps.google.com/maps/api/js?key=[AIzaSyADymuvSxOEri6cBmXxg8EBhbQu34Lq3GY]"></script>
