--- a/app/views/device/device.html.erb
+++ b/app/views/device/device.html.erb
@@ -1,4 +1,6 @@
-
+<script src="//maps.google.com/maps/api/js?key=[AIzaSyADymuvSxOEri6cBmXxg8EBhbQu34Lq3GY]"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
 <% if current_device %>
     <div class="container">
@@ -29,15 +31,12 @@
         <% end %>
     </div><br>
 
+      kaixo
       <div style='width: 800px;'>
         <div id="map" style='width: 800px; height: 400px;'></div>
       </div>
 
-      <div style='width: 800px;'>
-        <div id="sidebar_builder" style='width: 800px; height: 400px;'></div>
-      </div>
-      <div id='sidebar_container'>
-      </div>
+      kaixo
 
       <h2>GPS SIGNAL DATES</h2>
       <table class="table table-hover">
@@ -73,7 +72,7 @@
     });
 </script>
 
-<script>
+<script type="text/javascript">
     handler = Gmaps.build('Google');
     handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
         markers = handler.addMarkers([
@@ -92,53 +91,3 @@
         handler.fitMapToBounds();
     });
 </script>
-
-<script>
-    function createSidebarLi(json){
-        return ("<li><a>" + json.name + "</a></li>");
-    };
-
-    function bindLiToMarker($li, marker){
-        $li.on('click', function(){
-            handler.getMap().setZoom(14);
-            marker.setMap(handler.getMap()); //because clusterer removes map property from marker
-            marker.panTo();
-            google.maps.event.trigger(marker.getServiceObject(), 'click');
-        })
-    };
-
-    function createSidebar(json_array){
-        _.each(json_array, function(json){
-            var $li = $( createSidebarLi(json) );
-            $li.appendTo('#sidebar_container');
-            bindLiToMarker($li, json.marker);
-        });
-    };
-
-    handler = Gmaps.build('Google');
-    handler.buildMap({ internal: {id: 'sidebar_builder'}}, function(){
-        var json_array = [
-            { lat: 40, lng: -80, name: 'Foo', infowindow: "I'm Foo" },
-            { lat: 45, lng: -90, name: 'Bar', infowindow: "I'm Bar" },
-            { lat: 50, lng: -85, name: 'Baz', infowindow: "I'm Baz" }
-        ];
-
-        var markers = handler.addMarkers(json_array);
-
-        _.each(json_array, function(json, index){
-            json.marker = markers[index];
-        });
-
-        createSidebar(json_array);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-    });
-
-</script>
-
-
-
-
-<script src="//maps.google.com/maps/api/js?key=[AIzaSyADymuvSxOEri6cBmXxg8EBhbQu34Lq3GY]"></script>
-<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
