--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -29,38 +29,6 @@ img{max-width:100%;}
 /*end reset*/
 /*----importing-fonts---*/
 /*-----light-font----*/
-@font-face {
-    font-family: 'open_sanslight';
-    src: url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.eot');
-    src: url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.woff') format('woff'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-	/*-----regular-font----*/
-@font-face {
-    font-family: 'open_sansregular';
-    src: url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot');
-    src: url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-	/*-----semi-bold-font----*/
-@font-face {
-    font-family: 'open_sanssemibold';
-    src: url('../fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot');
-    src: url('../fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.woff') format('woff'),
-         url('../fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 /*----//importing-fonts---*/
 body{
 	background:#fff;
@@ -224,9 +192,6 @@ body{
 	float:right;
 	width:58%;
 }
-.fea li a:before{
-	content:url(arrow.png) no-repeat 0px 0px;
-}
 .mid-grids-right h3 span{
 	color:#E95192;
 	font-size: 1.4em;
@@ -358,10 +323,10 @@ body{
 	margin: 0.4em 0 1em;
 	padding: 0.8em;
 	border: 1px solid #C3C3C3;
-	transition: border-color 0.5s all;
-	-webkit-transition: border-color 0.5s all;
-	-moz-transition: border-color 0.5s all;
-	-o-transition: border-color 0.5s all;
+	transition: border-color 0.5s ;
+	-webkit-transition: border-color 0.5s ;
+	-moz-transition: border-color 0.5s ;
+	-o-transition: border-color 0.5s ;
 	font-family: 'open_sanssemibold';
 	color: #3D3D3D;
 	outline: none;
@@ -564,15 +529,6 @@ body{
     z-index: 100;
     opacity: 0.5;
 }
-.nbs-flexisel-nav-left {
-    left: 10px;
-    background: url(../images/button-previous.png) no-repeat;
-}
-
-.nbs-flexisel-nav-right {
-    right: 5px;
-    background: url(../images/button-next.png) no-repeat;
-}
 /*---//clients-sider-----*/
 /*---//End-about----*/
 /*---start-feartures-grids----*/
@@ -740,10 +696,10 @@ fieldset#body {
 	border: 1px solid #D8D8D8;
 	font-size: 0.875em;
 	font-family: 'open_sansregular';
-	transition: border-color 0.5s all;
-	-webkit-transition: border-color 0.5s all;
-	-moz-transition: border-color 0.5s all;
-	-o-transition: border-color 0.5s all;
+	transition: border-color 0.5s ;
+	-webkit-transition: border-color 0.5s ;
+	-moz-transition: border-color 0.5s ;
+	-o-transition: border-color 0.5s ;
 	border-radius: 0.15em;
 	-webkit-border-radius: 0.15em;
 	-moz-border-radius: 0.15em;
@@ -893,10 +849,10 @@ fieldset#signupbody {
 	border: 1px solid #D8D8D8;
 	font-size: 0.875em;
 	font-family: 'open_sansregular';
-	transition: border-color 0.5s all;
-	-webkit-transition: border-color 0.5s all;
-	-moz-transition: border-color 0.5s all;
-	-o-transition: border-color 0.5s all;
+	transition: border-color 0.5s ;
+	-webkit-transition: border-color 0.5s ;
+	-moz-transition: border-color 0.5s ;
+	-o-transition: border-color 0.5s ;
 	border-radius: 0.15em;
 	-webkit-border-radius: 0.15em;
 	-moz-border-radius: 0.15em;
