--- a/app/views/authentication/sign_in.html.erb
+++ b/app/views/authentication/sign_in.html.erb
@@ -1,15 +1,23 @@
 <h1>Sign In</h1>
+<br><br><br><br>
+<div align="center">
+  <div align="left" style="width: 30%;">
 <%= form_for User.new, :as => :user, :url => sign_in_path(User.new) do |f| %>
+        <br><br><br><br><br>
     <p>
-      <%= f.label ' email:' %><br />
-      <%= f.text_field :email , :required => true %>
+      <b><%= f.label 'Email:' %><br /></b>
+      <%= f.text_field :email , :required => true, class: "form-control" %>
     </p>
+        <br><br>
     <p>
-      <%= f.label 'password:' %><br />
-      <%= f.password_field :password , :required => true %>
+      <b><%= f.label 'password:' %><br /></b>
+      <%= f.password_field :password , :required => true , class: "form-control"%>
     </p>
+        <br><br>
     <p>
       <%= f.submit 'Sign In',  class: "btn btn-primary" %>&nbsp;&nbsp;&nbsp;
       <%= f.submit 'Clear Form', :type => 'reset',     class: "btn btn-primary"%>
     </p>
 <% end %>
+  </div>
+</div>
