--- a/app/views/authentication/sign_in.html.erb
+++ b/app/views/authentication/sign_in.html.erb
@@ -4,6 +4,8 @@
   <div align="left" style="width: 30%;">
 <%= form_for User.new, :as => :user, :url => sign_in_path(User.new) do |f| %>
         <br><br><br><br><br>
+        <b><p style="font-size: 250%">SIGN IN</p></b>
+        <br><br>
     <p>
       <b><%= f.label 'Email:' %><br /></b>
       <%= f.text_field :email , :required => true, class: "form-control" %>
